# cloud-cert-renewer

./: .actrc  .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.example  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTE.md  TROUBLESHOOTING.md  index.yaml  main.py  memory_tool_usage_guide.mdc  pyproject.toml  testing-design-principles.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
charts/: cloud-cert-renewer-0.2.0-rc1.tgz  cloud-cert-renewer-0.2.1-rc1.tgz  cloud-cert-renewer-0.2.2-beta1.tgz  cloud-cert-renewer-0.2.3-beta1.tgz  cloud-cert-renewer-0.2.4-beta1.tgz  cloud-cert-renewer-0.2.5-beta1.tgz  cloud-cert-renewer-0.2.6-beta1.tgz  cloud-cert-renewer-0.2.6-beta2.tgz  cloud-cert-renewer-0.2.6-beta3.tgz  cloud-cert-renewer-0.2.6-beta5.tgz  cloud-cert-renewer-0.2.6-beta6.tgz  cloud-cert-renewer-0.2.7-beta1.tgz  cloud-cert-renewer-0.2.8-beta1.tgz  cloud-cert-renewer-0.2.8-beta2.tgz  cloud-cert-renewer-0.2.8-beta3.tgz  cloud-cert-renewer-0.2.9-beta1.tgz  cloud-cert-renewer-0.2.9-beta2.tgz  cloud-cert-renewer-0.3.0-beta1.tgz  cloud-cert-renewer-0.3.0-beta2.tgz  cloud-cert-renewer-0.3.0-beta3.tgz  cloud-cert-renewer-0.3.1.tgz
cloud_cert_renewer/: __init__.py  __main__.py  adapters.py  auth.py  cli.py  config.py  container.py  errors.py  logging_utils.py  renewer.py
cloud_cert_renewer/auth/: __init__.py  access_key.py  base.py  env.py  errors.py  factory.py  iam_role.py  oidc.py  service_account.py  sts.py
cloud_cert_renewer/cert_renewer/: __init__.py  base.py  cdn_renewer.py  composite.py  factory.py  load_balancer_renewer.py
cloud_cert_renewer/clients/: __init__.py  alibaba.py
cloud_cert_renewer/config/: __init__.py  loader.py  models.py
cloud_cert_renewer/providers/: __init__.py  alibaba.py  aws.py  azure.py  base.py  noop.py
cloud_cert_renewer/utils/: ssl_cert_parser.py
cloud_cert_renewer/webhook/: __init__.py  client.py  events.py  exceptions.py
cloud_cert_renewer/webhook/builders/: __init__.py  wechat_work.py
cloud_cert_renewer/webhook/formatters/: __init__.py  base.py  generic.py  wechat_work.py
dianplus/utils/: ssl_cert_parser.py
docs/: webhook-configuration.md
helm/alibaba-cloud-cert-renewer/: Chart.yaml  README.md  values-cdn.yaml  values-slb.yaml  values.yaml
helm/alibaba-cloud-cert-renewer/templates/: _helpers.tpl  deployment.yaml
helm/cloud-cert-renewer/: Chart.yaml  LICENSE  README.md  values-cdn.yaml  values-slb.yaml  values-webhook-example.yaml  values-webhook-secret.yaml  values.yaml
helm/cloud-cert-renewer/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml  webhook-secret.yaml
k8s/: deployment.yaml
scripts/: check-webhook-secret.sh  check_language.sh  diagnose-webhook.sh  test-webhook.py  test-workflow-output.sh  test-workflow.sh  update_version.sh
tests/: test_auth_factory.py  test_auth_oidc.py  test_auth_providers.py  test_cert_renewer_base.py  test_cert_renewer_factory.py  test_cert_renewer_strategy.py  test_cli.py  test_cli_smoke.py  test_clients.py  test_config.py  test_container.py  test_integration.py  test_main.py  test_providers_adapter.py  test_ssl_cert_parser.py  test_utils.py
tests/test_webhook/: __init__.py  test_builders.py  test_client.py  test_events.py  test_formatter_factory.py  test_formatters.py  test_integration.py  test_service.py
