[project]
name = "cloud-cert-renewer"
version = "0.2.3-beta1"
description = "Automated HTTPS certificate renewal tool for cloud services, supporting CDN and Load Balancer (multi-cloud support, currently supports Alibaba Cloud)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "analyser", email = "analyser@gmail.com"}
]
keywords = [
    "cloud",
    "certificate",
    "ssl",
    "tls",
    "cdn",
    "load-balancer",
    "multi-cloud",
    "alibaba-cloud",
    "certificate-renewal",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "alibabacloud-cdn20180510>=3.1.2",
    "alibabacloud-credentials>=0.3.6",
    "alibabacloud-slb20140515>=3.1.2",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cloud-cert-renewer = "cloud_cert_renewer.cli:main"

[project.urls]
Homepage = "https://github.com/maskshell/cloud-cert-renewer"
Documentation = "https://github.com/maskshell/cloud-cert-renewer#readme"
Repository = "https://github.com/maskshell/cloud-cert-renewer"
Issues = "https://github.com/maskshell/cloud-cert-renewer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "yamllint>=1.32.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloud_cert_renewer"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["B018", "UP007"]  # Allow ... in Protocol

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
]
